--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,23 @@
     "name": "1688ImagesCrawling",
     "description": "Get 1688 Images :D",
     "version": "1.0",
+	"background": {
+      "scripts": ["jquery-3.5.1.min.js", "background.js"],
+	  "persistent": true
+    },
+	"content_scripts": [
+        {
+        "matches": ["http://*/*", "https://*/*"],
+        "js": [
+            "jquery-3.5.1.min.js", "content.js"
+        ],
+        "run_at": "document_start"
+        }
+    ], 
     "permissions":[
         "activeTab",
-        "tabs"
+        "tabs",
+		"contextMenus"
     ],
     "browser_action":{
         "default_title": "Get 1688 Images",
