--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,14 @@
     "description": "Get 1688 Images :D",
     "version": "1.0",
 	"background": {
-      "scripts": ["jquery-3.5.1.min.js", "background.js"],
+      "scripts": ["scripts/jquery-3.5.1.min.js", "background.js"],
 	  "persistent": true
     },
 	"content_scripts": [
         {
         "matches": ["http://*/*", "https://*/*"],
         "js": [
-            "jquery-3.5.1.min.js", "content.js"
+            "scripts/jquery-3.5.1.min.js", "content.js"
         ],
         "run_at": "document_start"
         }
