show popup even when user select text

--- a/manifest.json
+++ b/manifest.json
@@ -16,8 +16,9 @@
         }
     ], 
     "permissions":[
+		"tabs",
         "activeTab",
-        "tabs",
+		"storage",
 		"contextMenus"
     ],
     "browser_action":{
