--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,15 @@
     "version": "1.0",
 	"background": {
       "scripts": ["scripts/jquery-3.5.1.min.js", "background.js"],
-	  "persistent": true
+      "persistent": false
     },
 	"content_scripts": [
         {
-        "matches": ["http://*/*", "https://*/*"],
+        "matches": ["<all_urls>"],
         "js": [
             "scripts/jquery-3.5.1.min.js", "content.js"
         ],
+        "all_frames": true,
         "run_at": "document_start"
         }
     ], 
@@ -27,7 +28,7 @@
     },
     "manifest_version": 2,
 	"icons": {
-	   "16": "icon16.png",
-	  "128": "icon128.png"
+	   "16": "icons/icon16.png",
+	  "128": "icons/icon128.png"
 	}
 }
