--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
         {
         "matches": ["<all_urls>"],
         "js": [
-            "scripts/jquery-3.5.1.min.js", "content.js"
+            "scripts/jquery-3.5.1.min.js", "scripts/qrcode.min.js", "content.js"
         ],
         "all_frames": true,
         "run_at": "document_start"
